maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: '=' expected but '(' found.
def trouveSortie() : Array[Int](2) = {
                               ^JediEscaper:18: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^